--- a/.gitignore
+++ b/.gitignore
@@ -9,23 +9,5 @@ data/iphone_1.JPG
 data/iphone_2.JPG
 test.py
 data/connected.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.22 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.33 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.36 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.37 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.39 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.40 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.42 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.44 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.48 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.51 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.52.53 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.02 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.05 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.06 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.08 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.10 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.13 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.18 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.22 AM.png
-data/panograph_10/Screen Shot 2015-11-13 at 12.53.26 AM.png
+data/panograph_10
+data/Panorama/adobe_panoramas
